# LLM-gym

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  sample_server.py
.github/workflows/: build-and-publish.yml
cookbooks/: meilisearch.ipynb
db/: schema.prisma
gym_agent/: README.md  __init__.py  cli.py  requirements.txt  settings.py
gym_agent/agents/: graph_agent.py
gym_agent/api/: main.py
gym_agent/clients/: mcp_client.py  meilisearch_client.py  openai_client.py  qdrant_client.py  tavily_client.py
gym_agent/examples/: simple_example.py
gym_agent/mcp_servers/: meilisearch_server.py  qdrant_server.py
gym_agent/notebooks/: output.txt  sample_run.ipynb
gym_agent/schemas/: agent_schemas.py
gym_agent/tools/: search_tools.py
gym_db/: pyproject.toml
gym_db/gym_db/: db_funcs.py  schema.prisma
gym_db/gym_db/migrations/20241108201524_add_repo/: migration.sql
gym_reader/: Dockerfile  POSTGRES_CHATBOT_README.md  README.md  config.yml  data_models.py  logger.py  postgres_chatbot_cli.py  pyproject.toml  settings.py  supervisord.conf
gym_reader/agents/: extractor_agent.py  postgres_chatbot_agent.py  semantic_answer.py  utils.py
gym_reader/api/: api.py  middlewares.py
gym_reader/api/routes/: contextual_chat.py  git_sync.py  keyword_search.py
gym_reader/clients/: github_client.py  instructor_client.py  meilisearch_client.py  openai_client.py  postgres_mcp_client.py  prisma_client.py  qdrant_client.py  redis_client.py  spider_web_crawler.py  taviley_client.py
gym_reader/fastmcp_servers/: postgres_server.py
gym_reader/git_action_handlers/: push_event_data.json  utils.py
gym_reader/programmes/: programmes.py
gym_reader/semantic_search/: hybrid_search.py  index.py  preprocessor.py  utils.py
gym_reader/services/: indexing_service.py
gym_reader/signatures/: docstrings.py  signatures.py
infra/: Readme.md  cloudwatch_logs.tf  ecs_cluster.tf  iam_roles.tf  load_balancer.tf  outputs.tf  secrets.tf  security_groups.tf  services.tf  task_definations.tf  tfplan  variables.tf  volumes.tf  vpc.tf
search-ui/: .dockerignore  .env.sample  Dockerfile  package-lock.json  package.json
search-ui/public/: index.html
search-ui/src/: App.js  SearchComponent.js  config.js  index.js
