[tool.poetry]
name = "gym_db"
version = "0.1.0"
description = "All database operations for gym-reader"
authors = ["RheagalFire <arishalam121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^24.4.0"
colorlog = "^6.8.2"
cachetools = "^5.5.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.12"
prisma = "^0.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
