[tool.poetry]
name = "gym-reader"
version = "0.1.0"
description = ""
authors = ["RheagalFire <arishalam121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
structlog = "^24.4.0"
colorlog = "^6.8.2"
cachetools = "^5.5.0"
dspy = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
